changed: navbar e efeitos na navbar

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
   <md-toolbar layout="row" id="nav_f">
     <div class="md-toolbar-tools container" layout="row">
       <h1 flex="30" class="logo"><a href="#" class="brand-logo"><img src="assets/img/logo.jpg" width="200px"/></a></h1>
-      <div flex="40" layout="row">
-      	<span flex class="slogan" layout-wrap layout-padding>Transformando feedback em educação!</span>
+      <div flex="40" layout="row" class="slogan">
+      	<span flex class="slogan-text" layout-wrap layout-padding>Transformando feedback em educação!</span>
       </div>
       <div flex="30" class="social-icons" hide show-gt-sm>
         <div layout="row">
