fix: tamanho da barra de ideias

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
           </div>
           <div flex-xs="100" flex-sm="100" flex-md flex-gt-md>
             <div class="center promo"><i class="material-icons icon-xxxxlarge">assignment</i>
-              <h5 class="promo-caption">Gerenciamento inteligente</h5>
+              <h5 class="promo-caption">Gestão inteligente</h5>
               <p class="light center promo-description justify">Temos como sonho a melhoria das instituições por meio de feedbacks e de uma gestão inteligente que permite reter muito mais os estudantes.</p>
             </div>
           </div>
