--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
    <div class="container hero" flex="100" layout="row" layout-wrap>
       <md-toolbar layout="row" id="nav_f" flex-sm="100" flex-gt-sm="100">
         <div class="md-toolbar-tools container" layout="row">
-          <md-button flex="10" hide-gt-sm flex class="md-icon-button" aria-label="More" ng-click="openSideMenu()">
+          <md-button flex="10" hide-gt-xs flex class="md-icon-button" aria-label="More" ng-click="openSideMenu()">
             <i class="material-icons white-text">more_vert</i>
           </md-button>
           <h1 flex="40" class="logo"><a href="#" class="brand-logo"><img src="assets/img/logo-white.png" width="200px"/></a></h1>
@@ -59,7 +59,7 @@
           </div>
         </div>
       </md-toolbar>
-      <div ng-controller="LeftCtrl" flex-sm="20" flex-gt-sm="20" class="navbar-left">
+      <div ng-controller="NavLeftController" flex-sm="20" flex-gt-sm="20" class="navbar-left">
         <md-sidenav class="md-sidenav-left transparent" md-component-id="left" md-is-locked-open="$mdMedia('gt-xs')">
           <!--<md-toolbar class="md-theme-indigo">
             <h1 class="md-toolbar-tools">Sidenav Left</h1>
@@ -70,15 +70,15 @@
             </md-button>-->
               <nav id="navbar-left" hide-sm show-gt-xs>
                 <ul class="white-text">
-                    <li><a href="#" class="navbar-left-item" ng-click="">
+                    <li><a href="#" class="navbar-left-item" ng-click="closeSidebar()">
               <i class="material-icons">account_circle</i> Login</a></li>
-                    <li><a href="#" class="navbar-left-item" ng-click="">
+                    <li><a href="#" class="navbar-left-item" ng-click="closeSidebar()">
               <i class="material-icons">supervisor_account</i> Equipe</a></li>
-                    <li><a href="#" class="navbar-left-item" ng-click="">
+                    <li><a href="#" class="navbar-left-item" ng-click="closeSidebar()">
               <i class="material-icons">assessment</i> NPS</a></li>
-                    <li><a href="#" class="navbar-left-item" ng-click="">
+                    <li><a href="#" class="navbar-left-item" ng-click="closeSidebar()">
               <i class="material-icons">contact_mail</i> Contato</a></li>
-                    <li><a href="#" class="navbar-left-item" ng-click="">
+                    <li><a href="#" class="navbar-left-item" ng-click="closeSidebar()">
               <i class="material-icons">question_answer</i> FAQ</a></li>
                 </ul>
               </nav>
