fix: duracao da animacao das Ideias

--- a/index.html
+++ b/index.html
@@ -124,19 +124,19 @@
       <div class="container">
         <div layout="row" layout-wrap layout-align="center" layout-padding>
           <div flex-xs="100" flex-sm="100" flex-md flex-gt-md>
-            <div class="center promo wow-nonmobile fadeIn"><i class="material-icons icon-xxxxlarge">lightbulb_outline</i>
+            <div class="center promo wow-nonmobile fadeIn" data-wow-duration="2s"><i class="material-icons icon-xxxxlarge">lightbulb_outline</i>
               <h5 class="promo-caption">Inovação</h5>
               <p class="light center promo-description justify">Acreditamos em nosso potencial de incentivar a cultura de inovação dentro das instituições de Minas Gerais.</p>
             </div>
           </div>
           <div flex-xs="100" flex-sm="100" flex-md flex-gt-md>
-            <div class="center promo wow-nonmobile fadeIn"><i class="material-icons icon-xxxxlarge">assignment</i>
+            <div class="center promo wow-nonmobile fadeIn" data-wow-duration="2s"><i class="material-icons icon-xxxxlarge">assignment</i>
               <h5 class="promo-caption">Gestão inteligente</h5>
               <p class="light center promo-description justify">Temos como sonho a melhoria das instituições por meio de feedbacks e de uma gestão inteligente que permite reter muito mais os estudantes.</p>
             </div>
           </div>
           <div flex-xs="100" flex-sm="100" flex-md flex-gt-md>
-            <div class="center promo wow-nonmobile fadeIn"><i class="material-icons icon-xxxxlarge">trending_up</i>
+            <div class="center promo wow-nonmobile fadeIn" data-wow-duration="2s"><i class="material-icons icon-xxxxlarge">trending_up</i>
               <h5 class="promo-caption">Melhor estratégia</h5>
               <p class="light center promo-description justify">Com nossa ferramenta, sua instituição de ensino pode analisar os gargalos e criar estratégias de relacionamento com os estudantes.</p>
             </div>
