barra nps escondida temporariamente

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
        </div>
     </div>
    <main flex="100" id="conteudo" layout-align="center" layout-wrap layout="row" class="container">
-  	<div class="banner" ng-controller="progressCtrl" flex="80">
+  	<div class="banner" ng-controller="progressCtrl" flex="80" hide>
       <span class="bar-nps-title">Descubra a lealdade dos seus alunos.</span>
       <md-progress-linear md-mode="determinate" value="100"></md-progress-linear>
       <div class="nps-bar">
