fix: centralizacao do logo no mobile

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
           <div flex="50" layout="row" class="slogan" hide show-gt-xs>
           	<span flex class="slogan-text white-text" layout-wrap layout-padding>Transformando feedback em educação!</span>
           </div>
+          <div hide show-xs flex="10" flex></div>
           <div flex="30" class="social-icons white-text" hide show-gt-sm>
             <div layout="row">
                 <span flex="40"></span>
