add: quem somos e secao com grafico de barra da lib d3

--- a/index.html
+++ b/index.html
@@ -120,6 +120,29 @@
         <div class="nps-bar-0-6"></div><div class="nps-bar-7-8"></div><div class="nps-bar-9-10 arrow-box-right"></div>
       </div>
   	</div>
+    <div class="bar-chart wow-nonmobile fadeIn" data-wow-duration="2s" flex="100">
+      <div class="bar-chart-text center">
+        <span class="bar-chart-text-title white-text">Descubra a lealdade dos seus alunos.</span><br />
+        <p class="bar-chart-text-desc white-text">Meça, descubra, quantifique a lealdade de seus estudantes e<br> aumente a qualidade de sua instituição.</p>
+      </div>
+      <div id="bar-chart-bg"></div>
+    </div>
+    <div class="quem-somos" flex="100" layout-align="center" layout-wrap layout="row">
+      <span flex="20" hide show-gt-sm></span>
+      <div class="quem-somos-emocoes wow-nonmobile fadeIn" data-wow-duration="2s" flex="10" flex-xs="100" layout-align="center" layout-wrap layout="column" layout-xs="row" layout-padding layout-align="center">
+        <i class="material-icons center nps-green-text" flex flex-order-xs="3">sentiment_satisfied</i>
+        <i class="material-icons center nps-yellow-text" flex flex-order-xs="2">sentiment_neutral</i>
+        <i class="material-icons center nps-red-text" flex flex-order-xs="1">sentiment_dissatisfied</i>
+      </div>
+      <div class="quem-somos-text justify wow-nonmobile fadeIn" flex flex-xs="100" data-wow-duration="2s" layout-padding layout-margin>
+        <p>Somos uma plataforma SaaS que utiliza NPS para análise do feedback de estudantes para permitir inovação de instituições de ensino.</p>
+
+        <p>Analisamos o NPS em tempo real potencializando a eficiência e induzindo nossos clientes a ter um alto Life Value Time.</p>
+
+        <p>Utilize nossa ferramenta de planejamento de instituições de ensino para analisar os setores e processos em que há necessidade de melhoria e amplie a satisfação de seus estudantes.</p>
+      </div>
+      <span flex="20" hide show-gt-sm></span>
+    </div>
     <div flex="100" class="ideais white-text">
       <div class="container">
         <div layout="row" layout-wrap layout-align="center" layout-padding>
@@ -153,12 +176,13 @@
 
 </div>
 
+<script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
 <script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
 <script type="text/javascript" src="bower_components/angular-animate/angular-animate.min.js"></script>
 <script type="text/javascript" src="bower_components/angular-aria/angular-aria.min.js"></script>
 <script type="text/javascript" src="bower_components/angular-material/angular-material.min.js"></script>
-<script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
 <script type="text/javascript" src="bower_components/wow/dist/wow.min.js"></script>
+<script type="text/javascript" src="bower_components/d3/d3.min.js"></script>
 
 <script type="text/javascript" src="assets/js/modules.js"></script>
 <script type="text/javascript" src="assets/js/controllers.js"></script>
