fix: pequenas correcoes na responsividade

--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
   	</div>
     <div class="bar-chart wow-nonmobile fadeIn" data-wow-duration="2s" flex="100">
       <div class="bar-chart-text center">
-        <span class="bar-chart-text-title white-text">Descubra a lealdade dos seus alunos.</span><br />
-        <p class="bar-chart-text-desc white-text">Meça, descubra, quantifique a lealdade de seus estudantes e<br> aumente a qualidade de sua instituição.</p>
+        <span class="bar-chart-text-title white-text">Descubra a lealdade dos seus alunos</span><br />
+        <p class="bar-chart-text-desc white-text">Meça, descubra, quantifique a lealdade de seus estudantes e<br hide show-gt-xs /> aumente a qualidade de sua instituição</p>
       </div>
       <div id="bar-chart-bg"></div>
     </div>
